# django-site-institucional

./: .coverage  .gitignore  ANOTACOES.md  README.md  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20210307_2026.py  0003_auto_20210307_2035.py
core/templates/: 404.html  500.html  about.html  base.html  contact.html  features.html  footer.html  hero.html  index.html  services.html  team.html
core/tests/: test_forms.py  test_models.py  test_views.py
fusion/: settings.py  urls.py  wsgi.py
