[tool.poetry]
name = "django-avancado"
version = "0.1.0"
description = ""
authors = ["Diogo Baracho <diogo.baracho@somoseducacao.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.0.4"
dj-static = "^0.0.6"
django-stdimage = "^5.2.0"
whitenoise = "^5.2.0"
django-bootstrap4 = "^2.3.1"
dj-database-url = "^0.5.0"
static3 = "^0.7.0"
sqlparse = "^0.4.1"
six = "^1.15.0"
pytz = "^2021.1"
python-utils = "^2.5.6"
progressbar2 = "^3.53.1"
Pillow = "^8.1.2"
django-environ = "^0.4.5"
django-adminlte-3 = "^0.1.6"
model-bakery = "^1.2.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
